# drl-amr-navigation

./: .gitignore  README.md  debug_log.txt
install/: local_setup.sh  setup.sh
log/: latest_build
protos/: TurtleBot3Burger.proto  WarehouseObject.proto
sb3_logs/PPO_turtlebot3_rl_1/: events.out.tfevents.1746733919.DESKTOP-FN3M0B8.26885.0
sb3_logs/PPO_turtlebot3_rl_10/: events.out.tfevents.1746744061.DESKTOP-FN3M0B8.10063.0
sb3_logs/PPO_turtlebot3_rl_11/: events.out.tfevents.1746744255.DESKTOP-FN3M0B8.10353.0
sb3_logs/PPO_turtlebot3_rl_12/: events.out.tfevents.1746744406.DESKTOP-FN3M0B8.10687.0
sb3_logs/PPO_turtlebot3_rl_13/: events.out.tfevents.1746745402.DESKTOP-FN3M0B8.11652.0
sb3_logs/PPO_turtlebot3_rl_14/: events.out.tfevents.1746750047.DESKTOP-FN3M0B8.446.0
sb3_logs/PPO_turtlebot3_rl_15/: events.out.tfevents.1746754797.DESKTOP-FN3M0B8.1087.0
sb3_logs/PPO_turtlebot3_rl_16/: events.out.tfevents.1746765305.DESKTOP-FN3M0B8.8396.0
src/turtlebot3_rl/: CMakeLists.txt  README.md  package.xml  ros2_teleop_keyboard.py
src/turtlebot3_rl/controllers/forklift_controller/: forklift_controller.py
src/turtlebot3_rl/controllers/my_turtlebot3_controller/: Makefile  my_turtlebot3_controller.py
src/turtlebot3_rl/controllers/webots_supervisor_reset/: webots_supervisor_reset.py
src/turtlebot3_rl/controllers/worker_controller/: worker_controller.py
src/turtlebot3_rl/launch/: warehouse_driver_launch.py  warehouse_launch.py
src/turtlebot3_rl/worlds/: .warehouse_world.wbproj  .warehouse_world_backup.wbproj  warehouse_world.wbt  warehouse_world_backup.wbt
(+64 files in other folders)
